[gd_scene load_steps=9 format=3 uid="uid://75dgexs1e3no"]

[ext_resource type="Script" path="res://scripts/ui/player_list/player_list_element.gd" id="1_q6tiq"]
[ext_resource type="Script" path="res://scripts/ui/player_list/circle_buttons.gd" id="2_w6q2s"]
[ext_resource type="Texture2D" uid="uid://d3y7j7vyu03ii" path="res://assets/remote_player_icon_256.png" id="2_xkjfk"]
[ext_resource type="BitMap" uid="uid://bd0cj6rcgsdqb" path="res://assets/circle_click_mask_256.png" id="3_58ie7"]
[ext_resource type="Texture2D" uid="uid://cr08hxawkeaql" path="res://assets/add_button_256.png" id="3_vf52v"]
[ext_resource type="Texture2D" uid="uid://d14anqvmcyar3" path="res://assets/remove_button_256.png" id="5_lr6yf"]
[ext_resource type="Texture2D" uid="uid://c3emi5jqexqek" path="res://assets/rename_button_256.png" id="6_pcq7h"]
[ext_resource type="Texture2D" uid="uid://c4um15dj3d267" path="res://assets/confirm_button_256.png" id="7_6ekdo"]

[node name="PlayerListElement" type="Control" node_paths=PackedStringArray("color_rect", "container", "arrow_container", "arrow_label", "username_label", "username_edit", "username_line_edit", "circle_buttons", "add_button", "remove_button", "rename_button", "confirm_button")]
clip_contents = true
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_q6tiq")
color_rect = NodePath("ColorRect")
container = NodePath("HBoxContainer")
arrow_container = NodePath("HBoxContainer/MarginContainer")
arrow_label = NodePath("HBoxContainer/MarginContainer/Arrow")
username_label = NodePath("HBoxContainer/Username")
username_edit = NodePath("HBoxContainer/UsernameEdit")
username_line_edit = NodePath("HBoxContainer/UsernameEdit/LineEdit")
circle_buttons = NodePath("CircleButtons")
add_button = NodePath("CircleButtons/AddButton")
remove_button = NodePath("CircleButtons/RemoveButton")
rename_button = NodePath("CircleButtons/RenameButton")
confirm_button = NodePath("CircleButtons/ConfirmButton")
username_color_human = Color(1, 1, 1, 1)
username_color_ai = Color(0.752941, 0.752941, 0.752941, 1)
bg_color_human = Color(0, 0, 0, 0.12549)
bg_color_ai = Color(0, 0, 0, 0.0627451)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.0627451)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15

[node name="Arrow" type="Label" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
text = "->"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Username" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.85
theme_override_colors/font_color = Color(0.752941, 0.752941, 0.752941, 1)
text = "Player (AI)"
vertical_alignment = 1
clip_text = true

[node name="UsernameEdit" type="Control" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.85
mouse_filter = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/UsernameEdit"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 67.0625
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.85
placeholder_text = "Username..."
expand_to_text_length = true
flat = true
caret_blink = true

[node name="OnlineStatus" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/OnlineStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xkjfk")
expand_mode = 1
stretch_mode = 5

[node name="CircleButtons" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_w6q2s")

[node name="AddButton" type="TextureButton" parent="CircleButtons"]
layout_mode = 2
offset_left = 1152.0
offset_right = 1152.0
size_flags_stretch_ratio = 0.1
mouse_filter = 1
texture_normal = ExtResource("3_vf52v")
texture_click_mask = ExtResource("3_58ie7")
ignore_texture_size = true
stretch_mode = 5

[node name="RemoveButton" type="TextureButton" parent="CircleButtons"]
visible = false
layout_mode = 2
offset_left = 1150.0
offset_right = 1150.0
size_flags_stretch_ratio = 0.1
mouse_filter = 1
texture_normal = ExtResource("5_lr6yf")
texture_click_mask = ExtResource("3_58ie7")
ignore_texture_size = true
stretch_mode = 5

[node name="RenameButton" type="TextureButton" parent="CircleButtons"]
layout_mode = 2
offset_left = 1150.0
offset_right = 1150.0
size_flags_stretch_ratio = 0.1
mouse_filter = 1
texture_normal = ExtResource("6_pcq7h")
texture_click_mask = ExtResource("3_58ie7")
ignore_texture_size = true
stretch_mode = 5

[node name="ConfirmButton" type="TextureButton" parent="CircleButtons"]
visible = false
layout_mode = 2
offset_left = 1148.0
offset_right = 1148.0
size_flags_stretch_ratio = 0.1
mouse_filter = 1
texture_normal = ExtResource("7_6ekdo")
texture_click_mask = ExtResource("3_58ie7")
ignore_texture_size = true
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="focus_exited" from="HBoxContainer/UsernameEdit/LineEdit" to="." method="_on_username_line_edit_focus_exited"]
[connection signal="pressed" from="CircleButtons/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="CircleButtons/RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="CircleButtons/RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="CircleButtons/ConfirmButton" to="." method="_on_confirm_button_pressed"]
